--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,22 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Damage"></activity>
-        <activity android:name=".Return" />
-        <activity android:name=".IN_View" />
-        <activity android:name=".Stock_Out_View" />
-        <activity android:name=".stock_OUT" />
-        <activity android:name=".customer_List" />
-        <activity android:name=".supplier_List" />
-        <activity android:name=".view_item" />
-        <activity android:name=".Add_Item" />
-        <activity android:name=".sign_UP" />
-        <activity android:name=".new_password" />
-        <activity android:name=".otp_page" />
-        <activity android:name=".ForgetPassword" />
-        <activity android:name=".Loginpg" />
         <activity
-            android:name=".MainActivity"
+            android:name="com.example.stockmangmentnew.LoginModule.LoginPage"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
@@ -33,6 +19,27 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".MainActivity"
+            android:label="@string/app_name"
+            android:theme="@style/AppTheme.NoActionBar">
+            <intent-filter>
+                <action android:name="android.intent.action.MainActivity" />
+            </intent-filter>
+        </activity>
+        <activity android:name=".Services.StockOut.Damage"></activity>
+        <activity android:name=".Services.StockOut.Return" />
+        <activity android:name=".Services.StockIn.IN_View" />
+        <activity android:name=".Services.StockOut.Stock_Out_View" />
+        <activity android:name=".Services.StockOut.stock_OUT" />
+        <activity android:name=".customer_List" />
+        <activity android:name=".supplier_List" />
+        <activity android:name=".Services.Items.view_item" />
+        <activity android:name=".Services.Items.Add_Item" />
+        <activity android:name=".LoginModule.sign_UP" />
+        <activity android:name=".LoginModule.new_password" />
+        <activity android:name=".LoginModule.otp_page" />
+        <activity android:name=".LoginModule.ForgetPassword"/>
     </application>
 
 </manifest>
