--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,7 +3,8 @@
     package="com.example.stockmangmentnew">
 
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -11,8 +12,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".Services.StockIn.stock_in"></activity>
         <activity
-            android:name="com.example.stockmangmentnew.LoginModule.LoginPage"
+            android:name=".LoginModule.LoginPage"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
@@ -29,7 +31,7 @@
                 <action android:name="android.intent.action.MainActivity" />
             </intent-filter>
         </activity>
-        <activity android:name=".Services.StockOut.Damage"></activity>
+        <activity android:name=".Services.StockOut.Damage" />
         <activity android:name=".Services.StockOut.Return" />
         <activity android:name=".Services.StockIn.IN_View" />
         <activity android:name=".Services.StockOut.Stock_Out_View" />
@@ -41,14 +43,14 @@
         <activity android:name=".LoginModule.sign_UP" />
         <activity android:name=".LoginModule.new_password" />
         <activity android:name=".LoginModule.otp_page" />
-        <activity android:name=".LoginModule.ForgetPassword"/>
+        <activity android:name=".LoginModule.ForgetPassword" />
         <activity
-            android:name="com.example.stockmangmentnew.QRcodeModule.MainActivity"
+            android:name=".QRcodeModule.MainActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.QRcodeModule.MainActivity" />
-              </intent-filter>
+            </intent-filter>
         </activity>
     </application>
 
