added changes 12-july-19

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,16 +12,19 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Wifidongle_activity"></activity>
-        <activity android:name=".Router_activity" />
-        <activity android:name=".Printer_activity" />
-        <activity android:name=".Switches_activity" />
-        <activity android:name=".Cables_activity" />
-        <activity android:name=".RAM_activity" />
-        <activity android:name=".Monitor_activity" />
-        <activity android:name=".Mouse_activity" />
-        <activity android:name=".Keyboard_activity" />
-        <activity android:name=".UPS_activity" />
+        <activity android:name=".Processor"></activity>
+        <activity android:name=".ProductDetail.xerox_activity" />
+        <activity android:name=".ProductDetail.GPS_activity" />
+        <activity android:name=".ProductDetail.Wifidongle_activity" />
+        <activity android:name=".ProductDetail.Router_activity" />
+        <activity android:name=".ProductDetail.Printer_activity" />
+        <activity android:name=".ProductDetail.Switches_activity" />
+        <activity android:name=".ProductDetail.Cables_activity" />
+        <activity android:name=".ProductDetail.RAM_activity" />
+        <activity android:name=".ProductDetail.Monitor_activity" />
+        <activity android:name=".ProductDetail.Mouse_activity" />
+        <activity android:name=".ProductDetail.Keyboard_activity" />
+        <activity android:name=".ProductDetail.UPS_activity" />
         <activity android:name=".Services.StockIn.stock_in" />
         <activity
             android:name=".LoginModule.LoginPage"
@@ -47,7 +50,7 @@
         <activity android:name=".Services.StockOut.Stock_Out_View" />
         <activity android:name=".Services.StockOut.stock_OUT" />
         <activity android:name=".customer_List" />
-        <activity android:name=".supplier_List" />
+        <activity android:name=".ProductDetail.supplier_List" />
         <activity android:name=".Services.Items.view_item" />
         <activity android:name=".Services.Items.Add_Item" />
         <activity android:name=".LoginModule.sign_UP" />
