--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,8 +12,16 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Services.Return.Repaire"></activity>
-        <activity android:name=".Services.Return.Reject" />
+        <activity android:name=".ProductDetail.Scanner_activity"></activity>
+        <activity android:name=".ProductDetail.Laptop_activity"
+            android:parentActivityName=".Services.Items.Add_Item"
+
+
+            />
+        <activity android:name=".Services.Return.Repaire"
+            android:parentActivityName=".Services.Return.Return"/>
+        <activity android:name=".Services.Return.Reject"
+            android:parentActivityName=".Services.Return.Return"/>
         <activity android:name=".ProductDetail.Processor" />
         <activity android:name=".ProductDetail.xerox_activity" />
         <activity android:name=".ProductDetail.GPS_activity" />
@@ -27,7 +35,8 @@
         <activity android:name=".ProductDetail.Mouse_activity" />
         <activity android:name=".ProductDetail.Keyboard_activity" />
         <activity android:name=".ProductDetail.UPS_activity" />
-        <activity android:name=".Services.StockIn.stock_in" />
+        <activity android:name=".Services.StockIn.stock_in"
+            android:parentActivityName=".MainActivity"/>
         <activity
             android:name=".LoginModule.LoginPage"
             android:label="@string/app_name"
@@ -46,19 +55,32 @@
                 <action android:name="android.intent.action.MainActivity" />
             </intent-filter>
         </activity>
-        <activity android:name=".Services.Return.Damage" />
-        <activity android:name=".Services.Return.Return" />
-        <activity android:name=".Services.StockIn.Stock_IN_View" />
-        <activity android:name=".Services.StockOut.Stock_Out_View" />
-        <activity android:name=".Services.StockOut.stock_OUT" />
-        <activity android:name=".customer_List" />
-        <activity android:name=".ProductDetail.supplier_List" />
-        <activity android:name=".Services.Items.view_item" />
-        <activity android:name=".Services.Items.Add_Item" />
-        <activity android:name=".LoginModule.sign_UP" />
-        <activity android:name=".LoginModule.new_password" />
-        <activity android:name=".LoginModule.otp_page" />
-        <activity android:name=".LoginModule.ForgetPassword" />
+        <activity android:name=".Services.Return.Damage"
+            android:parentActivityName=".Services.Return.Return"/>
+        <activity android:name=".Services.Return.Return"
+            android:parentActivityName=".MainActivity"/>
+        <activity android:name=".Services.StockIn.Stock_IN_View"
+            android:parentActivityName=".MainActivity"/>
+        <activity android:name=".Services.StockOut.Stock_Out_View"
+            android:parentActivityName=".MainActivity"/>
+        <activity android:name=".Services.StockOut.stock_OUT"
+            android:parentActivityName=".MainActivity"/>
+        <activity android:name=".customer_List"
+            android:parentActivityName=".MainActivity"/>
+        <activity android:name=".supplier_List"
+            android:parentActivityName=".MainActivity"/>
+        <activity android:name=".Services.Items.view_item"
+            android:parentActivityName=".MainActivity"/>
+        <activity android:name=".Services.Items.Add_Item"
+            android:parentActivityName=".MainActivity"/>
+        <activity android:name=".LoginModule.sign_UP"
+            android:parentActivityName=".LoginModule.LoginPage"/>
+        <activity android:name=".LoginModule.new_password"
+            android:parentActivityName=".LoginModule.otp_page"/>
+        <activity android:name=".LoginModule.otp_page"
+            android:parentActivityName=".LoginModule.ForgetPassword" />
+        <activity android:name=".LoginModule.ForgetPassword"
+            android:parentActivityName=".LoginModule.LoginPage" />
         <activity
             android:name=".QRcodeModule.MainActivity"
             android:label="@string/app_name"
