--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 29
     buildToolsVersion "29.0.1"
     defaultConfig {
-        applicationId "com.example.com.oswal.stockmangmentnew"
+        applicationId "com.oswal.stockmangmentnew"
         minSdkVersion 21
         targetSdkVersion 29
         versionCode 1
