--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,29 +12,43 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name="com.oswal.stockmangmentnew.ProductDetail.Scanner_activity"></activity>
+        <activity android:name="com.oswal.stockmangmentnew.ProductDetail.Scanner_activity"
+            android:parentActivityName="com.oswal.stockmangmentnew.Services.Items.Add_Item"
+            ></activity>
         <activity android:name="com.oswal.stockmangmentnew.ProductDetail.Laptop_activity"
             android:parentActivityName="com.oswal.stockmangmentnew.Services.Items.Add_Item"
-
-
             />
         <activity android:name="com.oswal.stockmangmentnew.Services.Return.Repaire"
             android:parentActivityName="com.oswal.stockmangmentnew.Services.Return.Return"/>
         <activity android:name="com.oswal.stockmangmentnew.Services.Return.Reject"
             android:parentActivityName="com.oswal.stockmangmentnew.Services.Return.Return"/>
-        <activity android:name="com.oswal.stockmangmentnew.ProductDetail.Processor" />
-        <activity android:name="com.oswal.stockmangmentnew.ProductDetail.xerox_activity" />
-        <activity android:name="com.oswal.stockmangmentnew.ProductDetail.GPS_activity" />
-        <activity android:name="com.oswal.stockmangmentnew.ProductDetail.Wifidongle_activity" />
-        <activity android:name="com.oswal.stockmangmentnew.ProductDetail.Router_activity" />
-        <activity android:name="com.oswal.stockmangmentnew.ProductDetail.Printer_activity" />
-        <activity android:name="com.oswal.stockmangmentnew.ProductDetail.Switches_activity" />
-        <activity android:name="com.oswal.stockmangmentnew.ProductDetail.Cables_activity" />
-        <activity android:name="com.oswal.stockmangmentnew.ProductDetail.RAM_activity" />
-        <activity android:name="com.oswal.stockmangmentnew.ProductDetail.Monitor_activity" />
-        <activity android:name="com.oswal.stockmangmentnew.ProductDetail.Mouse_activity" />
-        <activity android:name="com.oswal.stockmangmentnew.ProductDetail.Keyboard_activity" />
-        <activity android:name="com.oswal.stockmangmentnew.ProductDetail.UPS_activity" />
+        <activity android:name="com.oswal.stockmangmentnew.ProductDetail.Processor"
+            android:parentActivityName="com.oswal.stockmangmentnew.Services.Items.Add_Item"/>
+        <activity android:name="com.oswal.stockmangmentnew.ProductDetail.xerox_activity"
+            android:parentActivityName="com.oswal.stockmangmentnew.Services.Items.Add_Item"/>
+        <activity android:name="com.oswal.stockmangmentnew.ProductDetail.GPS_activity"
+            android:parentActivityName="com.oswal.stockmangmentnew.Services.Items.Add_Item"/>
+        <activity android:name="com.oswal.stockmangmentnew.ProductDetail.Wifidongle_activity"
+            android:parentActivityName="com.oswal.stockmangmentnew.Services.Items.Add_Item"/>
+        <activity android:name="com.oswal.stockmangmentnew.ProductDetail.Router_activity"
+            android:parentActivityName="com.oswal.stockmangmentnew.Services.Items.Add_Item"/>
+        <activity android:name="com.oswal.stockmangmentnew.ProductDetail.Printer_activity"
+            android:parentActivityName="com.oswal.stockmangmentnew.Services.Items.Add_Item"/>
+        <activity android:name="com.oswal.stockmangmentnew.ProductDetail.Switches_activity"
+            android:parentActivityName="com.oswal.stockmangmentnew.Services.Items.Add_Item"/>
+        <activity android:name="com.oswal.stockmangmentnew.ProductDetail.Cables_activity"
+            android:parentActivityName="com.oswal.stockmangmentnew.Services.Items.Add_Item"/>
+        <activity android:name="com.oswal.stockmangmentnew.ProductDetail.RAM_activity"
+            android:parentActivityName="com.oswal.stockmangmentnew.Services.Items.Add_Item"/>
+        <activity android:name="com.oswal.stockmangmentnew.ProductDetail.Monitor_activity"
+            android:parentActivityName="com.oswal.stockmangmentnew.Services.Items.Add_Item"/>
+        <activity android:name="com.oswal.stockmangmentnew.ProductDetail.Mouse_activity"
+            android:parentActivityName="com.oswal.stockmangmentnew.Services.Items.Add_Item"
+            />
+        <activity android:name="com.oswal.stockmangmentnew.ProductDetail.Keyboard_activity"
+            android:parentActivityName="com.oswal.stockmangmentnew.Services.Items.Add_Item"/>
+        <activity android:name="com.oswal.stockmangmentnew.ProductDetail.UPS_activity"
+            android:parentActivityName="com.oswal.stockmangmentnew.Services.Items.Add_Item"/>
         <activity android:name="com.oswal.stockmangmentnew.Services.StockIn.stock_in"
             android:parentActivityName="com.oswal.stockmangmentnew.MainActivity"/>
         <activity
