--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,6 +48,13 @@ dependencies {
     implementation 'com.google.android.material:material:1.0.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'org.apache.commons:commons-io:1.3.2'
+    implementation 'com.github.bumptech.glide:glide:4.3.1'
+    implementation 'com.github.chenupt.android:multiplemodel:1.1.0@aar'
+    implementation 'com.github.chenupt.android:springindicator:1.0.2@aar'
+    implementation 'com.google.guava:guava:18.0'
+    // volley http library
+    implementation 'com.android.volley:volley:1.1.0'
+    implementation 'com.google.code.gson:gson:2.6.2'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
