--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,12 +2,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.oswal.stockmangmentnew">
 
-    <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"></uses-permission>
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"></uses-permission>
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
-
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -16,7 +10,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name="com.oswal.stockmangmentnew.LoginModule.LoginPage"
+            android:name=".LoginModule.LoginPage"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
@@ -25,91 +19,134 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".ProductDetail.wifi_LAN_card"
+            android:parentActivityName=".Services.Items.Add_Item"></activity>
+        <activity android:name=".ProductDetail.tv_activity"
+            android:parentActivityName=".Services.Items.Add_Item"/>
+        <activity android:name=".ProductDetail.tablet_activity"
+            android:parentActivityName=".Services.Items.Add_Item"/>
+
         <activity
-            android:name="com.oswal.stockmangmentnew.MainActivity"
+            android:name=".MainActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MainActivity" />
             </intent-filter>
         </activity>
-        <activity android:name="com.oswal.stockmangmentnew.ProductDetail.Scanner_activity"
-            android:parentActivityName="com.oswal.stockmangmentnew.Services.Items.Add_Item"
-            ></activity>
-        <activity android:name="com.oswal.stockmangmentnew.ProductDetail.Laptop_activity"
-            android:parentActivityName="com.oswal.stockmangmentnew.Services.Items.Add_Item"
-            />
-        <activity android:name="com.oswal.stockmangmentnew.Services.Return.Repaire"
-            android:parentActivityName="com.oswal.stockmangmentnew.Services.Return.Return"/>
-        <activity android:name="com.oswal.stockmangmentnew.Services.Return.Reject"
-            android:parentActivityName="com.oswal.stockmangmentnew.Services.Return.Return"/>
-        <activity android:name="com.oswal.stockmangmentnew.ProductDetail.Processor"
-            android:parentActivityName="com.oswal.stockmangmentnew.Services.Items.Add_Item"/>
-        <activity android:name="com.oswal.stockmangmentnew.ProductDetail.xerox_activity"
-            android:parentActivityName="com.oswal.stockmangmentnew.Services.Items.Add_Item"/>
-        <activity android:name="com.oswal.stockmangmentnew.ProductDetail.GPS_activity"
-            android:parentActivityName="com.oswal.stockmangmentnew.Services.Items.Add_Item"/>
-        <activity android:name="com.oswal.stockmangmentnew.ProductDetail.Wifidongle_activity"
-            android:parentActivityName="com.oswal.stockmangmentnew.Services.Items.Add_Item"/>
-        <activity android:name="com.oswal.stockmangmentnew.ProductDetail.Router_activity"
-            android:parentActivityName="com.oswal.stockmangmentnew.Services.Items.Add_Item"/>
-        <activity android:name="com.oswal.stockmangmentnew.ProductDetail.Printer_activity"
-            android:parentActivityName="com.oswal.stockmangmentnew.Services.Items.Add_Item"/>
-        <activity android:name="com.oswal.stockmangmentnew.ProductDetail.Switches_activity"
-            android:parentActivityName="com.oswal.stockmangmentnew.Services.Items.Add_Item"/>
-        <activity android:name="com.oswal.stockmangmentnew.ProductDetail.Cables_activity"
-            android:parentActivityName="com.oswal.stockmangmentnew.Services.Items.Add_Item"/>
-        <activity android:name="com.oswal.stockmangmentnew.ProductDetail.RAM_activity"
-            android:parentActivityName="com.oswal.stockmangmentnew.Services.Items.Add_Item"/>
-        <activity android:name="com.oswal.stockmangmentnew.ProductDetail.Monitor_activity"
-            android:parentActivityName="com.oswal.stockmangmentnew.Services.Items.Add_Item"/>
-        <activity android:name="com.oswal.stockmangmentnew.ProductDetail.Mouse_activity"
-            android:parentActivityName="com.oswal.stockmangmentnew.Services.Items.Add_Item"
-            />
-        <activity android:name="com.oswal.stockmangmentnew.ProductDetail.Keyboard_activity"
-            android:parentActivityName="com.oswal.stockmangmentnew.Services.Items.Add_Item"/>
-        <activity android:name="com.oswal.stockmangmentnew.ProductDetail.UPS_activity"
-            android:parentActivityName="com.oswal.stockmangmentnew.Services.Items.Add_Item"/>
-        <activity android:name="com.oswal.stockmangmentnew.Services.StockIn.Stock_in"
-            android:parentActivityName="com.oswal.stockmangmentnew.MainActivity"/>
-        <activity android:name="com.oswal.stockmangmentnew.Services.Return.Damage"
-            android:parentActivityName="com.oswal.stockmangmentnew.Services.Return.Return"/>
-        <activity android:name="com.oswal.stockmangmentnew.Services.Return.Return"
-            android:parentActivityName="com.oswal.stockmangmentnew.MainActivity"/>
-        <activity android:name="com.oswal.stockmangmentnew.Services.StockIn.Stock_IN_View"
-            android:parentActivityName="com.oswal.stockmangmentnew.MainActivity"/>
-        <activity android:name="com.oswal.stockmangmentnew.Services.StockOut.Stock_Out_View"
-            android:parentActivityName="com.oswal.stockmangmentnew.MainActivity"/>
-        <activity android:name="com.oswal.stockmangmentnew.Services.StockOut.stock_OUT"
-            android:parentActivityName="com.oswal.stockmangmentnew.MainActivity"/>
-        <activity android:name="com.oswal.stockmangmentnew.customer_List"
-            android:parentActivityName="com.oswal.stockmangmentnew.MainActivity"/>
-        <activity android:name="com.oswal.stockmangmentnew.supplier_List"
-            android:parentActivityName="com.oswal.stockmangmentnew.MainActivity"/>
-        <activity android:name="com.oswal.stockmangmentnew.Services.Items.view_item"
-            android:parentActivityName="com.oswal.stockmangmentnew.MainActivity"/>
-        <activity android:name="com.oswal.stockmangmentnew.Services.Items.Add_Item"
-            android:parentActivityName="com.oswal.stockmangmentnew.MainActivity"/>
-        <activity android:name="com.oswal.stockmangmentnew.LoginModule.sign_UP"
-            android:parentActivityName="com.oswal.stockmangmentnew.LoginModule.LoginPage"/>
-        <activity android:name="com.oswal.stockmangmentnew.LoginModule.new_password"
-            android:parentActivityName="com.oswal.stockmangmentnew.LoginModule.otp_page"/>
-        <activity android:name="com.oswal.stockmangmentnew.LoginModule.otp_page"
-            android:parentActivityName="com.oswal.stockmangmentnew.LoginModule.ForgetPassword" />
-        <activity android:name="com.oswal.stockmangmentnew.LoginModule.ForgetPassword"
-            android:parentActivityName="com.oswal.stockmangmentnew.LoginModule.LoginPage" />
         <activity
-            android:name="com.oswal.stockmangmentnew.QRcodeModule.MainActivity"
+            android:name=".ProductDetail.Scanner_activity"
+            android:parentActivityName=".Services.Items.Add_Item" />
+        <activity
+            android:name=".ProductDetail.Laptop_activity"
+            android:parentActivityName=".Services.Items.Add_Item" />
+        <activity
+            android:name=".Services.Return.Repaire"
+            android:parentActivityName=".Services.Return.Return" />
+        <activity
+            android:name=".Services.Return.Reject"
+            android:parentActivityName=".Services.Return.Return" />
+        <activity
+            android:name=".ProductDetail.Processor"
+            android:parentActivityName=".Services.Items.Add_Item" />
+        <activity
+            android:name=".ProductDetail.xerox_activity"
+            android:parentActivityName=".Services.Items.Add_Item" />
+        <activity
+            android:name=".ProductDetail.GPS_activity"
+            android:parentActivityName=".Services.Items.Add_Item" />
+        <activity
+            android:name=".ProductDetail.Wifidongle_activity"
+            android:parentActivityName=".Services.Items.Add_Item" />
+        <activity
+            android:name=".ProductDetail.Router_activity"
+            android:parentActivityName=".Services.Items.Add_Item" />
+        <activity
+            android:name=".ProductDetail.Printer_activity"
+            android:parentActivityName=".Services.Items.Add_Item" />
+        <activity
+            android:name=".ProductDetail.Switches_activity"
+            android:parentActivityName=".Services.Items.Add_Item" />
+        <activity
+            android:name=".ProductDetail.Cables_activity"
+            android:parentActivityName=".Services.Items.Add_Item" />
+        <activity
+            android:name=".ProductDetail.RAM_activity"
+            android:parentActivityName=".Services.Items.Add_Item" />
+        <activity
+            android:name=".ProductDetail.Monitor_activity"
+            android:parentActivityName=".Services.Items.Add_Item" />
+        <activity
+            android:name=".ProductDetail.Mouse_activity"
+            android:parentActivityName=".Services.Items.Add_Item" />
+        <activity
+            android:name=".ProductDetail.Keyboard_activity"
+            android:parentActivityName=".Services.Items.Add_Item" />
+        <activity
+            android:name=".ProductDetail.UPS_activity"
+            android:parentActivityName=".Services.Items.Add_Item" />
+        <activity
+            android:name=".Services.StockIn.Stock_in"
+            android:parentActivityName=".MainActivity" />
+        <activity
+            android:name=".Services.Return.Damage"
+            android:parentActivityName=".Services.Return.Return" />
+        <activity
+            android:name=".Services.Return.Return"
+            android:parentActivityName=".MainActivity" />
+        <activity
+            android:name=".Services.StockIn.Stock_IN_View"
+            android:parentActivityName=".MainActivity" />
+        <activity
+            android:name=".Services.StockOut.Stock_Out_View"
+            android:parentActivityName=".MainActivity" />
+        <activity
+            android:name=".Services.StockOut.stock_OUT"
+            android:parentActivityName=".MainActivity" />
+        <activity
+            android:name=".customer_List"
+            android:parentActivityName=".MainActivity" />
+        <activity
+            android:name=".supplier_List"
+            android:parentActivityName=".MainActivity" />
+        <activity
+            android:name=".Services.Items.view_item"
+            android:parentActivityName=".MainActivity" />
+        <activity
+            android:name=".Services.Items.Add_Item"
+            android:parentActivityName=".MainActivity" />
+        <activity
+            android:name=".LoginModule.sign_UP"
+            android:parentActivityName=".LoginModule.LoginPage" />
+        <activity
+            android:name=".LoginModule.new_password"
+            android:parentActivityName=".LoginModule.otp_page" />
+        <activity
+            android:name=".LoginModule.otp_page"
+            android:parentActivityName=".LoginModule.ForgetPassword" />
+        <activity
+            android:name=".LoginModule.ForgetPassword"
+            android:parentActivityName=".LoginModule.LoginPage" />
+        <activity
+            android:name=".QRcodeModule.MainActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.QRcodeModule.MainActivity" />
             </intent-filter>
         </activity>
-        <activity android:name="com.oswal.stockmangmentnew.Services.Supplier.DistrictMainActivity"
-        android:parentActivityName="com.oswal.stockmangmentnew.MainActivity"/>
-        <activity android:name="com.oswal.stockmangmentnew.Services.Customer.CustomerMainActivity"
-            android:parentActivityName="com.oswal.stockmangmentnew.MainActivity"/>
+        <activity
+            android:name=".Services.Supplier.DistrictMainActivity"
+            android:parentActivityName=".MainActivity" />
+        <activity
+            android:name=".Services.Customer.CustomerMainActivity"
+            android:parentActivityName=".MainActivity" />
     </application>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
 </manifest>
