--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.oswal.stockmangmentnew">
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
@@ -13,28 +14,34 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        android:usesCleartextTraffic="true">
+
         <activity
             android:name=".SplashScreen"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".webview"
+            android:parentActivityName=".MainActivity" ></activity>
         <activity
             android:name=".LoginModule.LoginPage"
             android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar">
-        </activity>
-        <activity android:name=".ProductDetail.wifi_LAN_card"
-            android:parentActivityName=".Services.Items.Add_Item"></activity>
-        <activity android:name=".ProductDetail.tv_activity"
-            android:parentActivityName=".Services.Items.Add_Item"/>
-        <activity android:name=".ProductDetail.tablet_activity"
-            android:parentActivityName=".Services.Items.Add_Item"/>
-
+            android:theme="@style/AppTheme.NoActionBar"></activity>
+        <activity
+            android:name=".ProductDetail.wifi_LAN_card"
+            android:parentActivityName=".Services.Items.Add_Item" />
+        <activity
+            android:name=".ProductDetail.tv_activity"
+            android:parentActivityName=".Services.Items.Add_Item" />
+        <activity
+            android:name=".ProductDetail.tablet_activity"
+            android:parentActivityName=".Services.Items.Add_Item" />
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
@@ -151,8 +158,9 @@
             android:name=".Services.Customer.CustomerMainActivity"
             android:parentActivityName=".MainActivity" />
         <activity
-            android:name="com.oswal.stockmangmentnew.AdminActivity.AddItemSpinner"
+            android:name=".AdminActivity.AddItemSpinner"
             android:parentActivityName=".MainActivity" />
     </application>
+
 
 </manifest>
