--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,8 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
-
+        <uses-library android:name="org.apache.http.legacy"
+            android:required="false" />
         <activity
             android:name=".SplashScreen"
             android:label="@string/app_name"
